[gd_scene load_steps=9 format=3 uid="uid://qwria8jiy8vr"]

[ext_resource type="PackedScene" uid="uid://dwki8cn7xuhuy" path="res://scene/rooms/world.tscn" id="1_dlu8p"]
[ext_resource type="Script" path="res://scene/scene_manager.gd" id="1_qod2y"]
[ext_resource type="PackedScene" uid="uid://dxlnecjp8nhas" path="res://scene/menu/pause/pause.tscn" id="3_8py1g"]
[ext_resource type="PackedScene" uid="uid://cde2e3b5sdpqo" path="res://scene/menu/skin_menu/skin_menu.tscn" id="4_spqbo"]

[sub_resource type="Animation" id="Animation_ys5mu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lsorw"]
resource_name = "fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_ovb1h"]
resource_name = "fade_out"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorTransition:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ivk5p"]
_data = {
"RESET": SubResource("Animation_ys5mu"),
"fade_in": SubResource("Animation_lsorw"),
"fade_out": SubResource("Animation_ovb1h")
}

[node name="SceneManager" type="Node2D"]
process_mode = 1
script = ExtResource("1_qod2y")

[node name="ScreenTransition" type="CanvasLayer" parent="."]
process_mode = 1

[node name="ColorTransition" type="ColorRect" parent="ScreenTransition"]
z_as_relative = false
anchors_preset = -1
anchor_left = -0.835294
anchor_top = -0.722222
anchor_right = 1.943
anchor_bottom = 1.794
offset_right = -0.476318
offset_bottom = 0.316772
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[node name="AnimationTransition" type="AnimationPlayer" parent="ScreenTransition"]
libraries = {
"": SubResource("AnimationLibrary_ivk5p")
}

[node name="CurrentScene" type="Node2D" parent="."]
process_mode = 1
z_index = 1

[node name="World" parent="CurrentScene" instance=ExtResource("1_dlu8p")]
process_mode = 0

[node name="PauseLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Pause" parent="PauseLayer" instance=ExtResource("3_8py1g")]
process_mode = 2
offset_left = -680.0
offset_top = -360.0
offset_right = -680.0
offset_bottom = -360.0

[node name="ChangeSkinLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="SkinMenu" parent="ChangeSkinLayer" instance=ExtResource("4_spqbo")]
process_mode = 2
offset_left = -680.0
offset_top = -360.0
offset_right = -680.0
offset_bottom = -360.0

[connection signal="animation_finished" from="ScreenTransition/AnimationTransition" to="." method="_on_animation_transition_finished"]
[connection signal="change_scene" from="CurrentScene/World" to="." method="_on_change_scene"]
[connection signal="start_combat" from="CurrentScene/World" to="." method="_on_player_start_combat"]
